cabal-version:      1.12
name:               hscim
version:            0.3.6
synopsis:           hscim json schema and server implementation
description:
  The README file will answer all the questions you might have

category:           Web
homepage:           https://github.com/wireapp/wire-server/libs/hscim/README.md
bug-reports:        https://github.com/wireapp/wire-server/issues
author:             Wire Swiss GmbH
maintainer:         Wire Swiss GmbH <backend@wire.com>
copyright:          (c) 2018 Wire Swiss GmbH
license:            AGPL-3
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG
  README.md

source-repository head
  type:     git
  location: https://github.com/wireapp/wire-server
  subdir:   hscim

library
  exposed-modules:
    Web.Scim.AttrName
    Web.Scim.Capabilities.MetaSchema
    Web.Scim.Capabilities.MetaSchema.Group
    Web.Scim.Capabilities.MetaSchema.ResourceType
    Web.Scim.Capabilities.MetaSchema.Schema
    Web.Scim.Capabilities.MetaSchema.SPConfig
    Web.Scim.Capabilities.MetaSchema.User
    Web.Scim.Class.Auth
    Web.Scim.Class.Group
    Web.Scim.Class.User
    Web.Scim.Client
    Web.Scim.ContentType
    Web.Scim.Filter
    Web.Scim.Handler
    Web.Scim.Schema.AuthenticationScheme
    Web.Scim.Schema.Common
    Web.Scim.Schema.Error
    Web.Scim.Schema.ListResponse
    Web.Scim.Schema.Meta
    Web.Scim.Schema.PatchOp
    Web.Scim.Schema.ResourceType
    Web.Scim.Schema.Schema
    Web.Scim.Schema.User
    Web.Scim.Schema.User.Address
    Web.Scim.Schema.User.Certificate
    Web.Scim.Schema.User.Email
    Web.Scim.Schema.User.IM
    Web.Scim.Schema.User.Name
    Web.Scim.Schema.User.Phone
    Web.Scim.Schema.User.Photo
    Web.Scim.Schema.UserTypes
    Web.Scim.Server
    Web.Scim.Server.Mock
    Web.Scim.Test.Acceptance
    Web.Scim.Test.Util

  other-modules:      Paths_hscim
  hs-source-dirs:     src
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:        -Wall -Werror -Wredundant-constraints
  build-depends:
      aeson                 >=2
    , aeson-qq              >=0.8.2   && <0.9
    , attoparsec            >=0.13.2  && <0.15
    , base                  >=4.12    && <4.15
    , bytestring            >=0.10.8  && <0.11
    , case-insensitive      >=1.2.1.0 && <1.3
    , email-validate        >=2.3.2   && <2.4
    , hashable              >=1.2.7   && <1.5
    , hedgehog              >=1.0.1   && <1.1
    , hspec                 >=2.7.1   && <2.9
    , hspec-expectations    >=0.8.2   && <0.9
    , hspec-wai             >=0.9.2   && <0.10
    , http-api-data         >=0.4.1   && <0.5
    , http-media            >=0.8.0   && <0.9
    , http-types            >=0.12.3  && <0.13
    , hw-hspec-hedgehog     >=0.1.0   && <0.2
    , list-t                >=1.0.4   && <1.1
    , microlens             >=0.4.10  && <0.5
    , mmorph                >=1.1.3   && <1.2
    , mtl                   >=2.2.2   && <2.3
    , network-uri           >=2.6.2   && <2.7
    , retry                 >=0.8.1.0 && <0.10
    , scientific            >=0.3.6   && <0.4
    , servant               >=0.16.2  && <0.20
    , servant-client        >=0.16.2  && <0.20
    , servant-client-core   >=0.16.2  && <0.20
    , servant-server        >=0.16.2  && <0.20
    , stm                   >=2.5.0   && <2.6
    , stm-containers        >=1.1.0   && <1.3
    , string-conversions    >=0.4.0   && <0.5
    , template-haskell      >=2.14.0  && <2.17
    , text                  >=1.2.3   && <1.3
    , time                  >=1.8.0   && <1.10
    , unordered-containers  >=0.2.10  && <0.3
    , uuid                  >=1.3.13  && <1.4
    , wai                   >=3.2.2   && <3.3
    , wai-extra             >=3.0.28  && <3.2
    , warp                  >=3.2.28  && <3.4

  default-language:   Haskell2010

executable hscim-server
  main-is:            Main.hs
  other-modules:      Paths_hscim
  hs-source-dirs:     server
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
    -Wredundant-constraints

  build-depends:
      aeson                 >=2
    , aeson-qq              >=0.8.2   && <0.9
    , attoparsec            >=0.13.2  && <0.15
    , base                  >=4.12    && <4.15
    , bytestring            >=0.10.8  && <0.11
    , case-insensitive      >=1.2.1.0 && <1.3
    , email-validate        >=2.3.2   && <2.4
    , hashable              >=1.2.7   && <1.5
    , hedgehog              >=1.0.1   && <1.1
    , hscim
    , hspec                 >=2.7.1   && <2.9
    , hspec-expectations    >=0.8.2   && <0.9
    , hspec-wai             >=0.9.2   && <0.10
    , http-api-data         >=0.4.1   && <0.5
    , http-media            >=0.8.0   && <0.9
    , http-types            >=0.12.3  && <0.13
    , hw-hspec-hedgehog     >=0.1.0   && <0.2
    , list-t                >=1.0.4   && <1.1
    , microlens             >=0.4.10  && <0.5
    , mmorph                >=1.1.3   && <1.2
    , mtl                   >=2.2.2   && <2.3
    , network-uri           >=2.6.2   && <2.7
    , retry                 >=0.8.1.0 && <0.10
    , scientific            >=0.3.6   && <0.4
    , servant               >=0.16.2  && <0.20
    , servant-client        >=0.16.2  && <0.20
    , servant-client-core   >=0.16.2  && <0.20
    , servant-server        >=0.16.2  && <0.20
    , stm                   >=2.5.0   && <2.6
    , stm-containers        >=1.1.0   && <1.3
    , string-conversions    >=0.4.0   && <0.5
    , template-haskell      >=2.14.0  && <2.17
    , text                  >=1.2.3   && <1.3
    , time                  >=1.8.0   && <1.10
    , unordered-containers  >=0.2.10  && <0.3
    , uuid                  >=1.3.13  && <1.4
    , wai                   >=3.2.2   && <3.3
    , wai-extra             >=3.0.28  && <3.2
    , warp                  >=3.2.28  && <3.4

  default-language:   Haskell2010

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Paths_hscim
    Test.AcceptanceSpec
    Test.Capabilities.MetaSchemaSpec
    Test.Class.AuthSpec
    Test.Class.GroupSpec
    Test.Class.UserSpec
    Test.FilterSpec
    Test.MiscSpec
    Test.Schema.AuthenticationSchemeSpec
    Test.Schema.GroupSpec
    Test.Schema.MetaSchemaSpec
    Test.Schema.PatchOpSpec
    Test.Schema.ResourceSpec
    Test.Schema.UserSpec
    Test.Schema.Util

  hs-source-dirs:     test
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
    -Wredundant-constraints

  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
      aeson                 >=2
    , aeson-qq              >=0.8.2   && <0.9
    , attoparsec            >=0.13.2  && <0.15
    , base                  >=4.12    && <4.15
    , bytestring            >=0.10.8  && <0.11
    , case-insensitive      >=1.2.1.0 && <1.3
    , email-validate        >=2.3.2   && <2.4
    , hashable              >=1.2.7   && <1.5
    , hedgehog              >=1.0.1   && <1.1
    , hscim
    , hspec                 >=2.7.1   && <2.9
    , hspec-expectations    >=0.8.2   && <0.9
    , hspec-wai             >=0.9.2   && <0.10
    , http-api-data         >=0.4.1   && <0.5
    , http-media            >=0.8.0   && <0.9
    , http-types            >=0.12.3  && <0.13
    , hw-hspec-hedgehog     >=0.1.0   && <0.2
    , indexed-traversable
    , list-t                >=1.0.4   && <1.1
    , microlens             >=0.4.10  && <0.5
    , mmorph                >=1.1.3   && <1.2
    , mtl                   >=2.2.2   && <2.3
    , network-uri           >=2.6.2   && <2.7
    , retry                 >=0.8.1.0 && <0.10
    , scientific            >=0.3.6   && <0.4
    , servant               >=0.16.2  && <0.20
    , servant-client        >=0.16.2  && <0.20
    , servant-client-core   >=0.16.2  && <0.20
    , servant-server        >=0.16.2  && <0.20
    , stm                   >=2.5.0   && <2.6
    , stm-containers        >=1.1.0   && <1.3
    , string-conversions    >=0.4.0   && <0.5
    , template-haskell      >=2.14.0  && <2.17
    , text                  >=1.2.3   && <1.3
    , time                  >=1.8.0   && <1.10
    , unordered-containers  >=0.2.10  && <0.3
    , uuid                  >=1.3.13  && <1.4
    , wai                   >=3.2.2   && <3.3
    , wai-extra             >=3.0.28  && <3.2
    , warp                  >=3.2.28  && <3.4

  default-language:   Haskell2010
