cabal-version:      1.12
name:               hscim
version:            0.4.0.6
synopsis:           hscim json schema and server implementation
description:
  The README file will answer all the questions you might have

category:           Web
homepage:           https://github.com/wireapp/wire-server/libs/hscim/README.md
bug-reports:        https://github.com/wireapp/wire-server/issues
author:             Wire Swiss GmbH
maintainer:         Wire Swiss GmbH <backend@wire.com>
copyright:          (c) 2018 Wire Swiss GmbH
license:            AGPL-3
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG
  README.md

source-repository head
  type:     git
  location: https://github.com/wireapp/wire-server
  subdir:   hscim

library
  exposed-modules:
    Web.Scim.AttrName
    Web.Scim.Capabilities.MetaSchema
    Web.Scim.Capabilities.MetaSchema.Group
    Web.Scim.Capabilities.MetaSchema.ResourceType
    Web.Scim.Capabilities.MetaSchema.Schema
    Web.Scim.Capabilities.MetaSchema.SPConfig
    Web.Scim.Capabilities.MetaSchema.User
    Web.Scim.Class.Auth
    Web.Scim.Class.Group
    Web.Scim.Class.User
    Web.Scim.Client
    Web.Scim.ContentType
    Web.Scim.Filter
    Web.Scim.Handler
    Web.Scim.Schema.AuthenticationScheme
    Web.Scim.Schema.Common
    Web.Scim.Schema.Error
    Web.Scim.Schema.ListResponse
    Web.Scim.Schema.Meta
    Web.Scim.Schema.PatchOp
    Web.Scim.Schema.ResourceType
    Web.Scim.Schema.Schema
    Web.Scim.Schema.User
    Web.Scim.Schema.User.Address
    Web.Scim.Schema.User.Certificate
    Web.Scim.Schema.User.Email
    Web.Scim.Schema.User.IM
    Web.Scim.Schema.User.Name
    Web.Scim.Schema.User.Phone
    Web.Scim.Schema.User.Photo
    Web.Scim.Schema.UserTypes
    Web.Scim.Server
    Web.Scim.Server.Mock
    Web.Scim.Test.Acceptance
    Web.Scim.Test.Util

  other-modules:      Paths_hscim
  hs-source-dirs:     src
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:        -Wall -Wredundant-constraints -Wunused-packages
  build-depends:
      aeson
    , aeson-qq
    , attoparsec
    , attoparsec-aeson
    , base
    , bytestring
    , case-insensitive
    , email-validate
    , hashable
    , hspec
    , hspec-expectations
    , hspec-wai
    , http-api-data
    , http-media
    , http-types
    , list-t
    , microlens
    , mmorph
    , mtl
    , network-uri
    , retry
    , scientific
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , stm
    , stm-containers
    , string-conversions
    , template-haskell
    , text
    , time
    , uuid
    , wai
    , wai-extra

  default-language:   Haskell2010

executable hscim-server
  main-is:            Main.hs
  other-modules:      Paths_hscim
  hs-source-dirs:     server
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -Wredundant-constraints
    -Wunused-packages

  build-depends:
      base
    , email-validate
    , hscim
    , network-uri
    , stm
    , stm-containers
    , time
    , warp

  default-language:   Haskell2010

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Paths_hscim
    Test.AcceptanceSpec
    Test.Capabilities.MetaSchemaSpec
    Test.Class.AuthSpec
    Test.Class.GroupSpec
    Test.Class.UserSpec
    Test.FilterSpec
    Test.MiscSpec
    Test.Schema.AuthenticationSchemeSpec
    Test.Schema.GroupSpec
    Test.Schema.MetaSchemaSpec
    Test.Schema.PatchOpSpec
    Test.Schema.ResourceSpec
    Test.Schema.UserSpec
    Test.Schema.Util

  hs-source-dirs:     test
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -Wredundant-constraints
    -Wunused-packages

  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
      aeson
    , attoparsec
    , base
    , bytestring
    , email-validate
    , hedgehog
    , hscim
    , hspec
    , hspec-expectations
    , hspec-wai
    , http-types
    , hw-hspec-hedgehog
    , indexed-traversable
    , microlens
    , network-uri
    , servant
    , servant-server
    , stm-containers
    , text
    , wai
    , wai-extra

  default-language:   Haskell2010
