name:           http-client-openssl-ext
version:        0.1.0
synopsis:       Extended version of http-client-openssl.
author:         Wire Swiss GmbH
maintainer:     Wire Swiss GmbH <backend@wire.com>
copyright:      (c) 2017 Wire Swiss GmbH
license:        AGPL-3
license-file:   LICENSE
stability:      experimental
category:       Network
build-type:     Simple
cabal-version:  >= 1.10

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs

    exposed-modules:
        Network.HTTP.Client.OpenSSL

    build-depends:
        base        >= 4.7  && < 5
      , byteable    >= 0.1
      , bytestring  >= 0.10
      , HsOpenSSL   >= 0.11
      , network     >= 2.6
      , http-client >= 0.4
      , time        >= 1.5
