cabal-version:      1.12
name:               http2-manager
version:            0.0.1
synopsis:           Managed connection pool for HTTP2
description:        Helps reuse HTTP2 connections with TLS support
category:           Web
author:             Wire Swiss GmbH
maintainer:         Wire Swiss GmbH <backend@wire.com>
copyright:          (c) 2020 Wire Swiss GmbH
license:            AGPL-3
license-file:       LICENSE
build-type:         Simple

-- cabal-fmt: glob-files test/resources/*.pem
extra-source-files:
  test/resources/localhost-key.pem
  test/resources/localhost.example.com-key.pem
  test/resources/localhost.example.com.pem
  test/resources/localhost.pem
  test/resources/unit-ca-key.pem
  test/resources/unit-ca.pem

library
  -- cabal-fmt: expand src
  exposed-modules:
    HTTP2.Client.Manager
    HTTP2.Client.Manager.Internal

  other-modules:    Paths_http2_manager
  hs-source-dirs:   src
  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -Wredundant-constraints
    -Wunused-packages

  build-depends:
      async
    , base
    , bytestring
    , containers
    , HsOpenSSL
    , http2
    , network
    , stm
    , streaming-commons
    , text
    , utf8-string

  default-language: Haskell2010

flag test-trailing-dot
  description: "Whether or not include the trailing dot test"
  default:     True

test-suite http2-manager-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -Wredundant-constraints -Wunused-packages -threaded
    -with-rtsopts=-N

  if flag(test-trailing-dot)
    cpp-options: -DENABLE-TRAILING-DOT-TEST

  -- cabal-fmt: expand test
  other-modules:
    Main
    Test.HTTP2.Client.ManagerSpec

  hs-source-dirs:     test
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
      async
    , base
    , bytestring
    , containers
    , HsOpenSSL
    , hspec
    , http-types
    , http2
    , http2-manager
    , network
    , random
    , stm
    , streaming-commons
    , time-manager
