name:           imports
version:        0.1.0
synopsis:       Very common imports
description:
  A single module combining some common imports. Designed to be
  usable as a drop-in Prelude replacement.
author:         Wire Swiss GmbH
maintainer:     Wire Swiss GmbH <backend@wire.com>
copyright:      (c) 2018 Wire Swiss GmbH
license:        AGPL-3
license-file:   LICENSE
stability:      experimental
category:       Utilities
build-type:     Simple
cabal-version:  >= 1.10

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs

    exposed-modules:
        Imports

    build-depends:
        base
      , unliftio
      , unliftio-core
      , containers
      , unordered-containers
      , text
      , bytestring
      , mtl
      , transformers
      , deepseq
