name:           metrics-collectd
version:        0.1.32
synopsis:       Metrics collectd integration
author:         Wire Swiss GmbH
maintainer:     Wire Swiss GmbH <backend@wire.com>
copyright:      (c) 2017 Wire Swiss GmbH
license:        AGPL-3
license-file:   LICENSE
category:       Data
build-type:     Simple
cabal-version:  >= 1.10

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all

    exposed-modules:
        System.Metrics.Collectd.Collectd
        System.Metrics.Collectd.IO
        System.Metrics.Collectd.Json
        System.Metrics.Collectd.Json.Path
        System.Metrics.Collectd.Config

    build-depends:
          aeson                >= 0.8
        , async                >= 2.0
        , attoparsec           >= 0.11
        , base                 == 4.*
        , containers           >= 0.5
        , hashable             >= 1.2
        , http-client          >= 0.3
        , ini                  >= 0.2
        , scientific           >= 0.3
        , text                 >= 0.11
        , time                 >= 1.4
        , transformers         >= 0.3
        , unordered-containers >= 0.2

executable metrics-collector
    default-language: Haskell2010
    hs-source-dirs:   main
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all
    main-is:          Main.hs

    build-depends:
          base             == 4.*
        , metrics-collectd
        , text             >= 0.11
        , transformers     >= 0.3
