name:           metrics-core
version:        0.3.2
synopsis:       Metrics core
author:         Wire Swiss GmbH
maintainer:     Wire Swiss GmbH <backend@wire.com>
copyright:      (c) 2017 Wire Swiss GmbH
license:        AGPL-3
license-file:   LICENSE
category:       Data
build-type:     Simple
cabal-version:  >= 1.10

library
    default-language:   Haskell2010
    default-extensions:
        NoImplicitPrelude
      , AllowAmbiguousTypes
      , BangPatterns
      , ConstraintKinds
      , DataKinds
      , DefaultSignatures
      , DeriveFunctor
      , DeriveGeneric
      , DeriveLift
      , DeriveTraversable
      , EmptyCase
      , FlexibleContexts
      , FlexibleInstances
      , FunctionalDependencies
      , GADTs
      , InstanceSigs
      , KindSignatures
      , LambdaCase
      , MultiParamTypeClasses
      , MultiWayIf
      , NamedFieldPuns
      , NoImplicitPrelude
      , NoMonomorphismRestriction
      , OverloadedStrings
      , PackageImports
      , PatternSynonyms
      , PolyKinds
      , QuasiQuotes
      , RankNTypes
      , ScopedTypeVariables
      , StandaloneDeriving
      , TemplateHaskell
      , TupleSections
      , TypeApplications
      , TypeFamilies
      , TypeFamilyDependencies
      , TypeOperators
      , UndecidableInstances
      , ViewPatterns
    hs-source-dirs:     src
    ghc-options:        -Wall -O2 -fwarn-tabs

    exposed-modules:
        Data.Metrics
        Data.Metrics.Buckets

    other-modules:
        Data.Metrics.GC

    build-depends:
          aeson                >= 0.6
        , atomic-primops       >= 0.8
        , base                 >= 4.9
        , hashable             >= 1.2
        , imports
        , unordered-containers >= 0.2
        , text                 >= 0.11
        , transformers         >= 0.3
        , vector               >= 0.10

benchmark metrics-core-bench
    default-language:   Haskell2010
    default-extensions:
        NoImplicitPrelude
      , AllowAmbiguousTypes
      , BangPatterns
      , ConstraintKinds
      , DataKinds
      , DefaultSignatures
      , DeriveFunctor
      , DeriveGeneric
      , DeriveLift
      , DeriveTraversable
      , EmptyCase
      , FlexibleContexts
      , FlexibleInstances
      , FunctionalDependencies
      , GADTs
      , InstanceSigs
      , KindSignatures
      , LambdaCase
      , MultiParamTypeClasses
      , MultiWayIf
      , NamedFieldPuns
      , NoImplicitPrelude
      , NoMonomorphismRestriction
      , OverloadedStrings
      , PackageImports
      , PatternSynonyms
      , PolyKinds
      , QuasiQuotes
      , RankNTypes
      , ScopedTypeVariables
      , StandaloneDeriving
      , TemplateHaskell
      , TupleSections
      , TypeApplications
      , TypeFamilies
      , TypeFamilyDependencies
      , TypeOperators
      , UndecidableInstances
      , ViewPatterns

    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    ghc-options: -Wall -fwarn-tabs -rtsopts -threaded -fno-ignore-asserts
    main-is: Main.hs

    build-depends:
          base
        , async
        , criterion
        , imports
        , metrics-core
        , unordered-containers
